--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,10 @@ body{
     flex-direction: column;
     min-height: 100vh;
     justify-content: center;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVnTiKJ3aodW49yyT2OHhWdO71qy5JHBC-ue6dWcnDTk8p9XPxVuPv-ruv8YZcFHABQIA&usqp=CAU);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210805/pngtree-modern-simple-elegant-cool-gradient-cream-landing-page-website-background-image_757446.jpg);
 }
 
 .header{
@@ -53,12 +52,18 @@ main{
 }
 h1{
     padding: 50px;
+    font-size: 3em;
 }
 
 h2{
     display: block;
-    font-size: 2em;
-   
+    font-size: 2em;  
+}
+
+h3{
+    display: block;
+    font-size: 1.2em;
+    padding-bottom: 20px;
 }
 
 #theQuestions{
@@ -87,7 +92,7 @@ button{
     color: rgb(29, 16, 16);
     font-size: 100%;
     cursor: pointer;
-    background-color: rgb(238, 236, 208);
+    background-color: rgb(173, 173, 164);
     margin: 10px 0 10px 0;
     padding: 5px 10px;
     border-radius: 10px;
